# organic_notebook

./: .env  .env.example  .gitignore  Cargo.toml
.github/workflows/: main.yml
OgnBackend/: .gitignore  Project.toml  README.md  acquire_onedrive_token.jl  env.jl  install_nginx.jl  setup_nginx.jl
OgnBackend/src/: Globals.jl  OgnBackend.jl  db.jl  endpoints.jl  models.jl
OgnBackend/src/db/: documents.jl  extracted_texts.jl  idea_refs.jl  ideas.jl
OgnBackend/src/endpoints/documents/: delete_document.jl  get_document.jl  get_documents.jl  get_num_documents.jl  upload_document.jl  upload_documents.jl
OgnBackend/src/endpoints/extracted_texts/: delete_extracted_texts_for_document.jl  extract_texts_for_document.jl  get_extracted_texts.jl  get_extracted_texts_for_document.jl  get_extracted_texts_for_document_bulk.jl  get_num_extracted_texts.jl
OgnBackend/src/endpoints/idea_refs/: create_idea_ref.jl  delete_idea_ref.jl  delete_idea_refs_for_document.jl  delete_idea_refs_for_idea.jl  get_idea_ref.jl  get_idea_refs.jl  get_idea_refs_for_idea.jl  get_num_idea_refs.jl  get_num_idea_refs_for_idea.jl
OgnBackend/src/endpoints/ideas/: create_idea.jl  delete_idea.jl  get_idea.jl  get_ideas.jl  get_num_ideas.jl
OgnBackend/src/sqls/: create_documents.psql  create_extracted_texts.psql  create_ideas.psql  drop_extracted_texts.psql  drop_ideas.psql
OgnBackend/src/utilities/: ConnectionPool.jl  content_types.jl  init_db.jl  macros.jl  onedrive_conversion.jl  pagination.jl  pdf_text_extractor.jl  pg_pool.jl  response_codes.jl
OgnBackend/test/: Anas's Grimoire of Black Magic.docx  connection_pool.jl  quality_assurance.jl  runtests.jl
OgnBackend/test/endpoints/: documents.jl  extracted_texts.jl  idea_refs.jl  ideas.jl
OgnFrontend/: .gitignore  package.json  svelte.config.js
OgnFrontend/src/lib/modules/documents/: api.js  stores.js
OgnFrontend/src/lib/modules/ideas/: api.js  stores.js
OgnFrontend/src/lib/modules/inputs/: Autocomplete.svelte
OgnFrontend/src/lib/modules/pdf/: stores.js
OgnFrontend/src/lib/modules/popups/: Dialog.svelte  DialogBase.svelte  Menu.svelte  MenuItem.svelte  Popups.svelte  Portal.svelte
OgnFrontend/src/lib/utils/: api.js  array-utils.js  utils.js
OgnFrontend/src/lib/utils/events/: documentViewerEvent.js  outClickEvent.js
OgnFrontend/src/routes/: __layout.svelte  index.svelte
OgnFrontend/static/: global.css
OnedriveTokenCreator/: Project.toml
OnedriveTokenCreator/src/: OnedriveTokenCreator.jl
autoservice/: Cargo.toml
autoservice-codegen/src/: lib.rs
autoservice/src/: lib.rs
autoservice_codegen/: Cargo.toml
autoservice_codegen/src/: lib.rs
ogn-backend/: Cargo.toml
ogn-backend/src/: endpoints.rs  main.rs
ogn-backend/src/endpoints/: create_idea.rs  create_idea_ref.rs  delete_document.rs  delete_extracted_texts_for_document.rs  delete_idea.rs  delete_idea_ref.rs  extract_texts_for_document.rs  get_document_entry.rs  get_documents.rs  get_extracted_texts.rs  get_extracted_texts_for_document.rs  get_extracted_texts_for_document_bulk.rs  get_idea_entry.rs  get_idea_refs.rs  get_idea_refs_entry.rs  get_idea_refs_for_idea.rs  get_ideas.rs  get_ideas_entry.rs  get_num_documents.rs  get_num_extracted_texts.rs  get_num_extracted_texts_for_document.rs  get_num_idea_refs.rs  get_num_idea_refs_for_idea.rs  get_num_ideas.rs  upload_document.rs
ogn-db/: Cargo.toml
ogn-db/migrations/00000000000000_diesel_initial_setup/: up.sql
ogn-db/migrations/2022-07-15-143730_create_documents/: up.sql
ogn-db/migrations/2022-07-16-150849_ideas/: down.sql  up.sql
ogn-db/migrations/2022-07-16-211221_add_filetype_document_table/: up.sql
ogn-db/migrations/2022-07-23-172158_extracted_text_table/: down.sql
ogn-db/src/: documents.rs  extracted_texts.rs  idea_refs.rs  ideas.rs  lib.rs  model_impls.rs  models.rs  result.rs  schema.rs
ogn-extractors/: Cargo.toml
ogn-extractors/src/: lib.rs
ogn-frontend/: package.json  svelte.config.js
ogn-frontend/src/: app.html
ogn-frontend/src/lib/modules/documents/: api.js  stores.js
ogn-frontend/src/lib/modules/ideas/: api.js  stores.js
ogn-frontend/src/lib/utils/: api.js  array-utils.js  utils.js
ogn-frontend/src/routes/: __layout.svelte  index.svelte
ogn-frontend/static/: global.css
ogn-test/: common.nim  config.nims  documents.nim  fmt.bat  idea_refs.nim  ideas.nim  main.nim  text_extraction.nim
ogn-utils/: Cargo.toml  build.rs  download_pdftotext.nim
ogn-utils/src/: conversion.rs  documents.rs  extractor.rs  lib.rs  onedrive.rs  result.rs
ogn_backend/: Cargo.toml
ogn_backend/src/: endpoints.rs  main.rs
ogn_backend/src/endpoints/: get_document_entry.rs  get_documents.rs  get_idea_entry.rs  get_idea_refs.rs  get_ideas.rs  get_num_documents.rs  get_num_idea_refs.rs  get_num_ideas.rs  upload_document.rs
ogn_db/: Cargo.toml
ogn_db/migrations/2022-07-15-143730_create_documents/: up.sql
ogn_db/migrations/2022-07-16-211221_add_filetype_document_table/: down.sql
ogn_db/src/: lib.rs  model_impls.rs  models.rs  schema.rs
ogn_frontend/: package-lock.json  package.json
ogn_frontend/.svelte-kit/: tsconfig.json
ogn_frontend/.svelte-kit/runtime/: env.js  paths.js
ogn_frontend/.svelte-kit/runtime/app/: env.js  navigation.js  paths.js  stores.js
ogn_frontend/.svelte-kit/runtime/client/: singletons.js  start.js
ogn_frontend/.svelte-kit/runtime/components/: error.svelte
ogn_frontend/.svelte-kit/runtime/server/: index.js
(+22 files in other folders)
