[workspace]

members = [
    "ogn-db",
    "ogn-backend",
    "autoservice-codegen",
    "autoservice",
    "ogn-extractors"
]

[workspace.dependencies]
actix-web = { version = "4.1.0" }
actix-multipart = "0.4.0"
diesel = { git = "https://github.com/diesel-rs/diesel.git" }
futures-util = "0.3.21"
dotenv = "0.15.0"
serde = "1.0.139"
serde_json = "1.0.82"
serde_derive = "1.0.139"
log = "0.4.17"
anyhow = "1.0.58"


ogn-db = { path = "ogn-db" }
autoservice = { path = "./autoservice" }

