cargo-features = ["workspace-inheritance"]
[package]
name = "ogn_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
actix-multipart = { workspace = true }
actix-cors = "0.6.1"
actix-files = "0.6.1"
futures-util = { workspace = true }
diesel = { workspace = true, features = ["postgres", "r2d2"] }
dotenv = { workspace = true }
dotenv_codegen = "0.15.0"
serde_json = { workspace = true }
crc32fast = "1.3.2"
anyhow = { workspace = true }

ogn-db = { workspace = true }
ogn-utils = { workspace = true }
autoservice = { workspace = true }

serde = { workspace = true }
serde_derive = { workspace = true }
