[package]
name = "ogn_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1.0" }
actix-multipart = "0.4.0"
futures-util = "0.3.21"
anyhow = "1.0.58"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
crc32fast = "1.3.2"
diesel = { git = "https://github.com/diesel-rs/diesel.git", features = ["postgres", "r2d2"] }

ogn-db = { path = "../ogn_db" }
