cargo-features = ["workspace-inheritance"]
[package]
name = "ogn_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
actix-multipart = { workspace = true }
futures-util = "0.3.21"
anyhow = { workspace = true }
dotenv = { workspace = true }
dotenv_codegen = "0.15.0"
crc32fast = "1.3.2"
diesel = { workspace = true, features = ["postgres", "r2d2"] }
serde_json = { workspace = true }

ogn-db = { workspace = true }
