cargo-features = ["workspace-inheritance"]

[package]
name = "ogn-db"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
diesel = { workspace = true, features = ["postgres", "serde_json"] }
diesel-derive-newtype = "2.0.0-rc.0"
dotenv = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
log = { workspace = true }


