cargo-features = ["workspace-inheritance"]

[package]
name = "ogn-db"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { workspace = true, features = ["postgres", "serde_json"] }
diesel-derive-newtype = "2.0.0-rc.0"
actix-web = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }

